--- a/tp/tp7/lib/Makefile
+++ b/tp/tp7/lib/Makefile
@@ -29,7 +29,7 @@ PROJECTNAME=test
 # Utilisez le suffixe .cpp pour les fichiers C++
 # Listez tous les fichiers a compiler, separes par
 # un espace. exemple: 'tp1.c tp2.cpp':
-PRJSRC= setRed.cpp setGreen.cpp
+PRJSRC= LED.cpp
 
 # Inclusions additionnels (ex: -I/path/to/mydir)
 INC= -I $(exec_dir)
