--- a/tp/tp7/lib/Makefile
+++ b/tp/tp7/lib/Makefile
@@ -30,7 +30,7 @@ PROJECTNAME=test
 # Listez tous les fichiers a compiler, separes par
 # un espace. exemple: 'tp1.c tp2.cpp':
 #PRJSRC= $(wildcard *.cpp)
-PRJSRC= debug.cpp RS232.cpp
+PRJSRC= debug.cpp rs232.cpp
 
 # Inclusions additionnels (ex: -I/path/to/mydir)
 INC= -I $(exec_dir)
