--- a/tp/tp7/lib/Makefile
+++ b/tp/tp7/lib/Makefile
@@ -29,8 +29,7 @@ PROJECTNAME=test
 # Utilisez le suffixe .cpp pour les fichiers C++
 # Listez tous les fichiers a compiler, separes par
 # un espace. exemple: 'tp1.c tp2.cpp':
-#PRJSRC= $(wildcard *.cpp)
-PRJSRC= debug.cpp rs232.cpp
+PRJSRC= $(wildcard *.cpp)
 
 # Inclusions additionnels (ex: -I/path/to/mydir)
 INC= -I $(exec_dir)
